--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -2,6 +2,26 @@
     display: flex;
 }
 
+#add_task_popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(211, 211, 211, 0.5);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+#add_task_popup_content {
+    width: 850px;
+    height: 60vh;
+    background-color: white;
+    border-radius: 16px;
+    display: flex;
+}
+
 .side_bar_position_container {
     position: relative;
     min-height: 100vh;
