--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -4,6 +4,27 @@
     background-color: black;
 }
 
+#create_popup {
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.create_card {
+    background-color: #2A3647;
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    padding: 24px;
+    border-radius: 16px;
+}
+
 main {
     display: flex;
 }
