--- a/assets/templates/add_task/add_task_template.css
+++ b/assets/templates/add_task/add_task_template.css
@@ -3,6 +3,28 @@
     font-size: 8px;
 }
 
+#create_popup {
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    z-index: 999;
+}
+
+.create_card {
+    background-color: #2A3647;
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    padding: 24px;
+    border-radius: 16px;
+}
+
 h1 {
     color: #000;
     margin: 0px;
