--- a/assets/css/landing_page.css
+++ b/assets/css/landing_page.css
@@ -40,4 +40,28 @@ body {
     display: flex;
     background-color: var(--main_color);
   }
+
+  @keyframes moveDiagonal {
+    0% {
+      transform: translate(0, 0) scale(1);
+    }
+    100% {
+      transform: translate(-40vw, -45vh) scale(0.65);
+    }
+  }
+
+  @keyframes resizeImage {
+    0% {
+      width: 300px;
+      height: 320px;
+    }
+    100% {
+      width: 100px;
+      height: 120px;
+    }
+  }
+
+  .landing_page_mobile img {
+    animation: moveDiagonal 2s forwards, resizeImage 2s forwards;
+  }
 }
