--- a/assets/css/sign_up.css
+++ b/assets/css/sign_up.css
@@ -21,29 +21,6 @@
   gap: 35px;
 }
 
-.sign_up_container_btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 110px;
-  height: 48px;
-  padding: 15px, 24px, 15px, 24px;
-  box-sizing: border-box;
-  border-radius: 8px;
-  border: solid 1px var(--main_color);
-  color: var(--card_color);
-  background-color: var(--main_color);
-  font-size: 21px;
-  font-weight: 700;
-}
-
-.sign_up_container_btn:hover {
-  cursor: pointer;
-  border: var(--lightblue_font);
-  background-color: var(--lightblue_font);
-  box-shadow: -1px 5px 5px 0px #c2c2c2;
-}
-
 /********** SIGN UP **********/
 
 .signup_page_main {
@@ -68,17 +45,16 @@
 /* signupHead */
 
 .signup_card_head {
-  position: relative;
+  
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  width: auto;
+  width: 100%;
+  gap: 100px;
 }
 
 .back_arrow {
-  display: flex;
-  position: relative;
-  left: -120px;
-  flex: 1;
+  justify-content: flex-start;
 }
 
 .back_arrow:hover {
@@ -87,8 +63,10 @@
 
 .signup_header {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-right: auto;
   gap: 16px;
 }
 
@@ -252,4 +230,38 @@
 .login_page_bottom a:hover {
   color: var(--lightblue_font);
   font-weight: bold;
+}
+
+/********** MEDIA QUERY **********/
+
+@media (max-width: 600px) {
+
+  .login_page_head {
+    padding: 0px 122px 0 25px;
+  }
+  .login_page_head img {
+    width: 64px;
+  }
+  .signup_card_head {
+    justify-content: center;
+    width: auto;
+    gap: 40px;
+  }
+  .signup_card_head h1 {
+    font-size: 40px;
+  }
+  .signup_card {
+    padding: 12px 8px 12px 8px;
+  }
+  .signup_input {
+    padding-inline: 12px;
+    /* margin-inline: 48px; */
+    width: 260px;
+  }
+  .signup_card_foot {
+    width: auto;
+  }
+  .login_page_bottom {
+    margin: 0;
+  }
 }
