--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -74,10 +74,12 @@
     align-items: center;
     flex-direction: column;
     width: 400px;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #FFFFFF;
     /* padding: 32px 24px 32px 24px; */
     margin-top: 101px;
+    max-height: 928px;
+    overflow-y: auto;
 }
 
 .contacts_scroll_abc {
