--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -12,14 +12,42 @@
     display: none;
     align-items: center;
     justify-content: center;
+    z-index: 999;
 }
 
 #add_task_popup_content {
-    width: 850px;
+    width: 100%;
+    max-width: 850px;
     height: 60vh;
     background-color: white;
     border-radius: 16px;
     display: flex;
+}
+
+#card_popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(211, 211, 211, 0.5);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+#card_popup_content {
+    width: 100%;
+    height: 90vh;
+    background-color: white;
+    border-radius: 16px;
+    display: flex;
+    max-width: 600px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+    border-radius: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
 .side_bar_position_container {
