--- a/assets/css/overlay.css
+++ b/assets/css/overlay.css
@@ -1,9 +1,9 @@
 .overlay {
     display: flex;
-    width: 525px;
     padding: 48px 40px;
     flex-direction: column;
     gap: 24px;
+    flex: 1;
 }
 
 .overlay_header {
@@ -123,10 +123,10 @@
 .assigned_to_container {
     display: flex;
     padding: 7px 16px;
-    justify-content: space-between;
     align-items: center;
     align-self: stretch;
     border-radius: 10px;
+    gap: 8px;
 }
 
 .assigned_to_field {
