--- a/style.css
+++ b/style.css
@@ -17,3 +17,17 @@ body {
     font-family: var(--main_font);
     background-color: var(--background_main);
 }
+
+.profil_ellipse {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 42px;
+  height: 42px;
+  background-color: #FF7A00;
+  border: 2px solid #f0efef;
+  border-radius: 45px;
+  gap: 10px;
+  color: #FFFFFF;
+  margin-left: 20px;
+}
