--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -2,27 +2,28 @@
   <img src="./assets/img/sidebar/join_logo_white.png" alt="Logo" />
 
   <div class="sidebar_menu_container">
-  <a href="./summary.html" class="sidebar_menu">
-    <img src="./assets/img/sidebar/summary.png" alt="Summary" />
-    <span>Summary</span>
-  </a>
-  <a href="./add_task.html" class="sidebar_menu">
-    <img src="./assets/img/sidebar/addTask.png" alt="Add Task" />
-    <span>Add Task</span>
-  </a>
-  <a href="./board.html" class="sidebar_menu">
-    <img src="./assets/img/sidebar/board.png" alt="Board" />
-    <span>Board</span>
-  </a>
-  <a href="./contacts.html" class="sidebar_menu">
-    <img src="./assets/img/sidebar/contacts.png" alt="Contacts" />
-    <span>Contacts</span>
-  </a>
-</div>
-
+    <a href="./summary.html" class="sidebar_menu">
+      <img src="./assets/img/sidebar/summary.png" alt="Summary" />
+      <span>Summary</span>
+    </a>
+    <a href="./add_task.html" class="sidebar_menu">
+      <img src="./assets/img/sidebar/addTask.png" alt="Add Task" />
+      <span>Add Task</span>
+    </a>
+    <a href="./board.html" class="sidebar_menu">
+      <img src="./assets/img/sidebar/board.png" alt="Board" />
+      <span>Board</span>
+    </a>
+    <a href="./contacts.html" class="sidebar_menu">
+      <img src="./assets/img/sidebar/contacts.png" alt="Contacts" />
+      <span>Contacts</span>
+    </a>
+  </div>
 
   <div class="sidebar_footer_link">
-    <a href="./privacy_policy.html">Privacy Policy</a>
+    <a href="./privacy_policy.html" onclick="hideSidebar()"
+      >Privacy Policy</a
+    >
     <a href="./legal_notice.html">Legal notice</a>
   </div>
 </section>
