--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -9,7 +9,7 @@
   background-color: #f6f7f8;
   z-index: 900;
   opacity: 1;
-  transition: opacity 0.5s ease; /* Übergangseigenschaft für Opazität */
+  transition: opacity 0.5s ease;
 }
 
 .modal.fade-out {
@@ -37,7 +37,7 @@
 }
 
 .landing_page_desktop img {
-  animation: moveDiagonal 2s forwards, resizeImage 2s forwards;
+  animation: moveDiagonal 1s forwards, resizeImage 2s forwards;
 }
 
 /********** HEAD **********/
