--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -39,7 +39,6 @@
 
 #card_popup_content {
     width: 100%;
-    height: 90vh;
     background-color: white;
     border-radius: 16px;
     display: flex;
@@ -213,4 +212,15 @@ h1 {
     border-radius: 16px;
     border: 1px dashed rgb(128, 128, 128);
     color: gray;
+}
+
+.edit_content {
+    display: flex;
+    flex-direction: column;
+    padding: 16px 0px;
+
+}
+
+.edit_content h2 {
+    font-size: 16px;
 }
