--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -218,9 +218,16 @@ h1 {
     display: flex;
     flex-direction: column;
     padding: 16px 0px;
-
+    width: 80%;
 }
 
 .edit_content h2 {
     font-size: 16px;
+}
+
+.button_container_edit {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 16px;
 }
