--- a/assets/css/overlay.css
+++ b/assets/css/overlay.css
@@ -38,6 +38,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 56px;
+    cursor: pointer;
 }
 
 .closeIcon {
@@ -129,6 +130,10 @@
     gap: 8px;
 }
 
+.assigned_to_container label {
+    cursor: pointer;
+}
+
 .assigned_to_field {
     display: flex;
     align-items: center;
@@ -213,7 +218,7 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
-   
+   cursor: pointer;
 }
 
 .edit_area_img {
