changed imprint, added JS Doc to functions

--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <section class="sidebar">
-      <img class="sidebar_logo" src="./assets/img/sidebar/join_logo_white.png" alt="Logo" />
+      <img
+        class="sidebar_logo"
+        src="./assets/img/sidebar/join_logo_white.png"
+        alt="Logo"
+      />
 
       <div class="sidebar_menu_container">
         <a href="./summary.html" id="sidebar_0" class="sidebar_menu">
@@ -29,14 +33,11 @@
       </div>
 
       <div class="sidebar_footer_link">
-        <a id="sidebar_4" href="./privacy_policy.html" onclick="hideSidebar()"
-          >Privacy Policy</a
-        >
+        <a id="sidebar_4" href="./privacy_policy.html">Privacy Policy</a>
         <a id="sidebar_5" href="./legal_notice.html">Legal notice</a>
       </div>
     </section>
 
-    <script src="./js/sidebar.js"
-    ></script>
+    <script src="./js/sidebar.js"></script>
   </body>
 </html>
