--- a/assets/css/legal_notice.css
+++ b/assets/css/legal_notice.css
@@ -35,9 +35,27 @@ li::marker {
   font-size: 2rem;
 }
 
+.font_color {
+  color: #29abe2;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+p {
+  margin: 0;
+  padding-block: 8px;
+}
+
 h1 {
   font-size: 4rem;
 }
+
+h2 {
+  font-size: 2rem;
+}
+
 h3 {
   margin: 0;
 }
