--- a/assets/css/sign_up.css
+++ b/assets/css/sign_up.css
@@ -7,10 +7,11 @@
   height: 100vh;
 }
 
-.login_page_head {
+.signup_page_head {
   display: flex;
   justify-content: space-between;
   padding: 60px 122px 0 77px;
+  margin-bottom: 1rem;
 }
 
 .sign_up_container {
@@ -243,10 +244,10 @@
 
 @media (max-width: 600px) {
 
-  .login_page_head {
+  .signup_page_head {
     padding: 0px 122px 0 25px;
   }
-  .login_page_head img {
+  .signup_page_head img {
     width: 64px;
   }
   .signup_card_head {
