changed Tab titles

--- a/assets/templates/header/header.css
+++ b/assets/templates/header/header.css
@@ -66,6 +66,10 @@
 
 /********** SUBMENU **********/
 
+.submenu_toggle {
+  padding: 0;
+}
+
 .header_submenu {
   display: flex;
   justify-content: flex-end;
