--- a/assets/css/sign_up.css
+++ b/assets/css/sign_up.css
@@ -1,3 +1,17 @@
+:root {
+  --main_color: #2a3647;
+  --main_color_lighter: #354458;
+  --main_color_dark: #091931;
+  --background_main: #f6f7f8;
+  --card_color: #ffffff;
+  --lightgray_font: #a8a8a8;
+  --placeholder_color: #d1d1d1;
+  --error: #FF0000;
+  --lightblue_font: #29abe2;
+  --main_font: "Inter", sans-serif;
+  --backup_font: system-ui, sans-serif;
+}
+
 /********** HEAD **********/
 
 .signup_page_container {
@@ -36,8 +50,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: auto;
+  max-width: 550px;
+  width: 100%;
   height: auto;
+  margin-inline: 1rem;
   padding: 40px;
   border-radius: 30px;
   background-color: var(--card_color);
@@ -91,7 +107,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  height: auto;
+  width: 70%;
   gap: 32px;
 }
 
@@ -147,13 +163,17 @@
   width: auto;
   height: auto;
   margin-top: -14px;
-  color: red;
+  color: var(--error);
   font-size: 12px;
   opacity: 50%;
 }
 
+.outline_blue {
+  border-color: var(--lightblue_font);
+}
+
 .outline_red {
-  border-color: red;
+  border-color: var(--error);
 }
 
 .signup_check {
@@ -200,10 +220,10 @@
   align-items: center;
   width: 110px;
   height: 48px;
-  padding: 15px, 24px, 15px, 24px;
   border-radius: 8px;
   font-size: 21px;
   font-weight: 700;
+  border: none;
   box-sizing: border-box;
   background-color: var(--main_color);
   color: var(--card_color);
