--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -18,6 +18,6 @@
   <div class="header_submenu_container w3-center w3-animate-right">
     <a href="./privacy_policy.html">Privacy Policy</a>
     <a href="./legal_notice.html">Legal Notice</a>
-    <a class="log_out" href="./login.html">Log out</a>
+    <a class="log_out" href="./index.html">Log out</a>
   </div>
 </section>
