added JS Doc for Signup/Login/Script.js

--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -10,7 +10,7 @@
     <a href="./help.html">
       <img src="./assets/img/header/property_default.png" alt="Fragezeichen" />
     </a>
-    <p class="submenu_toggle" onclick="toggleSubMenu()">SM</p>
+    <p class="submenu_toggle" onclick="toggleSubMenu()">G</p>
   </div>
 </section>
 
