--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -7,10 +7,10 @@
 
   <p class="header_text">Kanban Project Management Tool</p>
   <div class="header_login">
-    <a href="./help.html">
+    <a class="help_desktop" href="./help.html">
       <img src="./assets/img/header/property_default.png" alt="Fragezeichen" />
     </a>
-    <p class="submenu_toggle" onclick="toggleSubMenu()">G</p>
+    <p id="userInitials" class="submenu_toggle" onclick="toggleSubMenu()">G</p>
   </div>
 </section>
 
@@ -18,6 +18,7 @@
   <div class="header_submenu_container w3-center w3-animate-right">
     <a href="./privacy_policy.html">Privacy Policy</a>
     <a href="./legal_notice.html">Legal Notice</a>
+    <a class="help_mobile" href="./help.html">Help</a>
     <a class="log_out" href="./index.html">Log out</a>
   </div>
 </section>
