add query parameter on all sites

--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -16,8 +16,8 @@
 
 <section class="header_submenu">
   <div class="header_submenu_container w3-center w3-animate-right">
-    <a href="./privacy_policy.html">Privacy Policy</a>
-    <a href="./legal_notice.html">Legal Notice</a>
+    <a onclick="changeCurrentPage('privacy_policy')">Privacy Policy</a>
+    <a onclick="changeCurrentPage('legal_notice')">Legal Notice</a>
     <a class="log_out" href="./index.html">Log out</a>
   </div>
 </section>
