--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -18,7 +18,7 @@
   <div class="header_submenu_container w3-center w3-animate-right">
     <a onclick="changeCurrentPage('privacy_policy')">Privacy Policy</a>
     <a onclick="changeCurrentPage('legal_notice')">Legal Notice</a>
-    <a class="help_mobile" href="./help.html">Help</a>
+    <a class="help_mobile" onclick="changeCurrentPage('help')">Help</a>
     <a class="log_out" href="./index.html">Log out</a>
   </div>
 </section>
