--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -73,7 +73,7 @@
     align-items: center;
     flex-direction: column;
     width: 400px;
-    /* height: 100vh; */
+    height: calc(100vh -197px);
     background-color: #FFFFFF;
     /* padding: 32px 24px 32px 24px; */
     margin-top: 101px;
