--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -73,11 +73,11 @@
     align-items: center;
     flex-direction: column;
     width: 400px;
-    height: calc(100vh -197px);
+    height: calc(100vh - 197px);
     background-color: #FFFFFF;
     /* padding: 32px 24px 32px 24px; */
     margin-top: 101px;
-    max-height: 928px;
+    /* max-height: 928px; */
     overflow-y: auto;
 }
 
