added toggle icons login and blue outline

--- a/assets/css/sign_up.css
+++ b/assets/css/sign_up.css
@@ -123,6 +123,10 @@
   background: #fff;
 }
 
+#signupPwImg:hover, #signupPwImgConfirm:hover {
+  cursor: pointer;
+}
+
 .signup_input input {
   flex: 1;
   height: 24px;
