--- a/assets/templates/header/header_logout.css
+++ b/assets/templates/header/header_logout.css
@@ -24,6 +24,7 @@
   padding: 0px 40px 0px 200px;
   background-color: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
 
 .header_text {
@@ -36,7 +37,7 @@
 @media (max-width: 1000px) {
   .header_container {
     padding: 20px 16px;
-    height: auto;
+    height: 60px;
   }
 
   .header_text {
